# jadex

./: .gitignore  LICENSE  README.md  pyproject.toml
jadex/algorithms/: __init__.py
jadex/algorithms/vae/: README.md  train_vae.py
jadex/algorithms/vae/configs/: vae_config.yaml
jadex/algorithms/vae/models/: __init__.py  base_vae.py  daps.py  fsq.py  gumbel.py  ppo.py  vae.py  vqvae.py  vqvae_fsq.py
jadex/base/: base_model.py  base_state.py  base_trainer.py  registrable.py
jadex/data/: __init__.py
jadex/data/dataloader/: __init__.py  _utils.py  base_dataloader.py  jax_dataloader.py  jax_sampler.py  worker.py
jadex/data/datasets/: __init__.py  base_dataset.py  base_vision_dataset.py  cifar.py  imagenet.py  lafan.py  mnist.py
jadex/data/utils/: downloading.py  image_patcher.py  transforms.py
jadex/distributions/: __init__.py  base_distribution.py  bernoulli.py  categorical.py  diagonal_gaussian.py  dist_utils.py  uniform.py
jadex/downstream/: __init__.py
jadex/downstream/image_label/: generate_random.py  train_image_label_df.py
jadex/downstream/image_label/models/: __init__.py  (+1 more)
jadex/downstream/traj_gpt/: train_traj_gpt.py
jadex/global_configs/: __init__.py  constants.py
jadex/networks/: __init__.py  autoregressive_sampling.py  conv1d.py  diffusion_transformer.py  nn_utils.py  resnet.py  running_mean_std.py  transformer.py
jadex/networks/variational/: __init__.py  constants.py  variational_network.py
jadex/utils/: __init__.py  dm_pix_metrics.py  fidjax.py  hdf5io.py  lafan_utils.py  plotting.py  printing.py  scheduler.py  wandb_sweep.py
(+84 files in other folders)
